--- a/projects.html
+++ b/projects.html
@@ -3,13 +3,17 @@
 <head>
     <title>Projects - Geethanjali Portfolio</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/Kamma Geethanjali pic.jpg">
 </head>
 <body>
     <h1>My Projects</h1>
-
     <h2>Student Course Manager</h2>
     <p>A Java console application with MySQL to manage student details (add, view, update, delete) using JDBC.</p>
     <p>🔗 <a href="https://github.com/kammaGeethanjlai/student-course-manager" target="_blank">View on GitHub</a></p>
+    <h2>Contact Book</h2>
+    <p>A Java console application to manage contacts (add & view) using MySQL and JDBC.</p>
+    <p>🔗 <a href="https://github.com/kammaGeethanjlai/contact-Book/tree/main" target="_blank">View on GitHub</a></p>
+
 
     <nav>
         <a href="index.html">Home</a> |
