--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <title>About - Geethanjali Portfolio</title>
     <link rel="stylesheet" href="./style.css">
-     <link rel="icon" href="./images/Kamma Geethanjali pic.jpg">
+     <link rel="icon" href="./Kamma Geethanjali pic.jpg">
 </head>
 <body>
     <h1>About Me</h1>
