--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,13 @@
 <head>
     <title>Contact - Geethanjali Portfolio</title>
     <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./Kamma Geethanjali pic.jpg">
+
 </head>
 <body>
     <h1>Contact Me</h1>
     <p>📧 Email:kammageethanjali2426@gmail.com</p>
-    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/geethanjali-kamma-b7295a266/" target="_blank">View my LinkedIn</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/kammageethanjali/" target="_blank">View my LinkedIn</a></p>
 
     <nav>
         <a href="index.html">Home</a> |
