--- a/projects.html
+++ b/projects.html
@@ -3,16 +3,54 @@
 <head>
     <title>Projects - Geethanjali Portfolio</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./images/Kamma Geethanjali pic.jpg">
+    <link rel="icon" href="./Kamma Geethanjali pic.jpg">
 </head>
 <body>
+     <section id="projects">
+    <div class="project-card">
     <h1>My Projects</h1>
-    <h2>Student Course Manager</h2>
+    <h3>Student Course Manager</h3>
     <p>A Java console application with MySQL to manage student details (add, view, update, delete) using JDBC.</p>
-    <p>🔗 <a href="https://github.com/kammaGeethanjlai/student-course-manager" target="_blank">View on GitHub</a></p>
-    <h2>Contact Book</h2>
+    <p>
+      <a href="https://kammageethanjlai.github.io/student-course-manager/" target="_blank">Live Demo</a> |
+      <a href="https://github.com/kammaGeethanjlai/student-course-manager" target="_blank">GitHub Code</a>
+    </p>
+    </div>
+    <div class="project-card">
+    <h3>Contact Book</h3>
     <p>A Java console application to manage contacts (add & view) using MySQL and JDBC.</p>
-    <p>🔗 <a href="https://github.com/kammaGeethanjlai/contact-Book/tree/main" target="_blank">View on GitHub</a></p>
+    <p>
+      <a href="https://kammageethanjlai.github.io/contact-Book/" target="_blank">Live Demo</a> |
+      <a href="https://github.com/kammaGeethanjlai/contact-Book" target="_blank">GitHub Code</a>
+    </p>
+    </div>
+    <div class="project-card">
+    <h3>HTML Showcase Project</h3>
+    <p>To showcase my HTML skills in a clean, single page — part of my portfolio. </p>
+    <p>
+      <a href=" https://kammageethanjlai.github.io/advanced-html-demo/" target="_blank">Live Demo</a> |
+      <a href="https://github.com/kammaGeethanjlai/advanced-html-demo" target="_blank">GitHub Code</a>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3>CSS Showcase Project</h3>
+    <p>A clean multi-section layout built with HTML & CSS demonstrating layout design, buttons, hover effects, and responsive sections.</p>
+    <p>
+      <a href="https://kammageethanjlai.github.io/Lavi_Collections/" target="_blank">Live Demo</a> |
+      <a href="https://github.com/kammaGeethanjlai/css-showcase-project" target="_blank">GitHub Code</a>
+    </p>
+  </div>
+
+  <div class="project-card">
+    <h3>JavaScript Calculator</h3>
+    <p>An interactive calculator built using vanilla JavaScript, HTML, and CSS. Includes basic arithmetic functions and clear/reset logic.</p>
+    <p>
+      <a href=" https://kammageethanjlai.github.io/Tip_Calculator/" target="_blank">Live Demo</a> |
+       <a href="https://github.com/kammaGeethanjlai/Tip_Calculator" target="_blank">GitHub Code</a>
+    </p>
+  </div>
+</section>
 
 
     <nav>
